# pinn_experiments_py

./: deno.json  pyproject.toml  readme.md
src/: nn.py
