[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pinn_experiments_py"
version = "0.1.0"
description = "experimenting with physics informed neural networks (pinns)"
readme = "readme.md"
requires-python = ">=3.12"
authors = [{ name = "Omar Azmi", email = "omar.aazmi@gmail.com" }]
dependencies = ["jax >= 0.4.0", "numpy >= 2.1.0", "scipy >= 1.14.0"]
keywords = ["pinn", "pinns", "pde-solving"]

[project.urls]
Home = "https://github.com/omar-azmi/pinn_experiments_py"

[tool.flit.module]
name = "mod"
path = "src/"

[project.optional-dependencies]
dev = ["taskipy >= 1.14.0", "notebook >= 7.0.0"]

[tool.taskipy.tasks]

[tool.autopep8]
max_line_length = 512
ignore = ["W191", "E701", "C0103", "W0105"]

[tool.isort]
profile = "black"
line_length = 80
indent = "\t"
multi_line_output = 5
lines_between_sections = 0

[tool.pylint.messages_control]
max-line-length = 512
indent-string = "\t"
disable = [
	"missing-docstring",
	"invalid-name",
	"line-too-long",
	"too-many-arguments",
	"pointless-string-statement",
	"C0321",
]

[tool.pylint.design]
# limiting the number of returns might discourage
# the use of guard clauses. So we increase the
# allowed number of returns from 6 to 8
max-returns = 8
